<resources>
    <string name="app_name">CS2450 Android App</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="team">Team Red Tigers</string>
    <string name="Welcome">Welcome to the Concentration Game!</string>
    <string name="Music">Background Music (Off)</string>
    <string name="End">End Game</string>
    <string name="New">New Game</string>
    <string name="Try_again">Try Again</string>
    <string name="TeamLogo">Team Red Tigers Logo</string>
    <string name="StartGame">Start New Game</string>
    <string name="GameSizeSelection">Select the number of Cards you would like?</string>
    <string name="CheckAnswer">Check Answers</string>
    <string name="credits">Credits</string>
    <string name="Abrahan_Pedroza">Abrahan Pedroza, #011257480</string>
</resources>