<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".ConcentrationGame">

    <Button
        android:id="@+id/NewGameButton"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:text="@string/New"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:textStyle="bold"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSwitch"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/endButton"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:layout_marginBottom="4dp"
        android:text="@string/End"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:textStyle="bold"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/NewGameButton"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/TryAgainButton"
        android:layout_width="106dp"
        android:layout_height="43dp"
        android:text="@string/Try_again"
        android:textAllCaps="true"
        android:textSize="11sp"
        android:textStyle="bold"
        app:backgroundTint="#2196F3"
        app:layout_constraintBottom_toTopOf="@+id/endButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/musicSwitch"
        android:layout_width="174dp"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/Music"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>